// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header/> with feature flag off should render Header 1`] = `
<DocumentFragment>
  <nav
    class="css-1toix5l"
  >
    <div
      class="css-70qvj9"
    />
    <div
      class="css-259i0c"
      data-testid="icons-button"
    >
      <svg
        class="chakra-icon css-onkibi"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M 3 5 A 1.0001 1.0001 0 1 0 3 7 L 21 7 A 1.0001 1.0001 0 1 0 21 5 L 3 5 z M 3 11 A 1.0001 1.0001 0 1 0 3 13 L 21 13 A 1.0001 1.0001 0 1 0 21 11 L 3 11 z M 3 17 A 1.0001 1.0001 0 1 0 3 19 L 21 19 A 1.0001 1.0001 0 1 0 21 17 L 3 17 z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="css-1w6q9gu"
    >
      <div
        class="css-dba1zl"
      >
        <p
          class="chakra-text css-4obtxn"
        >
          <a
            href="/"
          >
            Home
          </a>
        </p>
        <p
          class="chakra-text css-4obtxn"
        >
          <a
            href="/"
          >
            Home
          </a>
        </p>
        <p
          class="chakra-text css-1cdymvu"
        >
          <a
            href="/"
          >
            Pricing
          </a>
        </p>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`<Header/> with feature flag on should render Header 1`] = `
<DocumentFragment>
  <nav
    class="css-dz6bnj"
  >
    <div
      class="css-70qvj9"
    />
    <button
      aria-label="Hamburger Menu"
      class="chakra-button css-ng89r3"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="chakra-icon css-n5gr1q"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M 3 5 A 1.0001 1.0001 0 1 0 3 7 L 21 7 A 1.0001 1.0001 0 1 0 21 5 L 3 5 z M 3 11 A 1.0001 1.0001 0 1 0 3 13 L 21 13 A 1.0001 1.0001 0 1 0 21 11 L 3 11 z M 3 17 A 1.0001 1.0001 0 1 0 3 19 L 21 19 A 1.0001 1.0001 0 1 0 21 17 L 3 17 z"
          fill="currentColor"
        />
      </svg>
    </button>
  </nav>
</DocumentFragment>
`;
